--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "whisperjs",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "HTTP Request functionality from within a node.js application using preset expresss routes and middleware",
   "keywords": ["framework", "web", "middleware", "whisper"],
   "repository": "git://github.com/snodgrass23/whisperjs.git",
   "author": "Jim Snodgrass <snodgrass23@gmail.com>",
-  "repository": "git://github.com/snodgrass23/whisperjs",
-  "dependencies": {},
+  "dependencies": {
+    "async":"=0.1.9"  
+  },
   "devDependencies": {
     "express": "2.3.x"
   },
